module12/istio-demo/nginx-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-basic
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
