module12/istio-demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-basic
  namespace: istio-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
