module12/istio-demo/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - nginx.basic
        - httpserver.com
      port:
        name: http-simple
        number: 80 #这里对端口要看istio-system 下ingress svc 开启的端口有哪些
        protocol: HTTP
