module12/istio-demo/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sidecar
spec:
  gateways:
    - nginx-gateway
  hosts:
    - nginx-basic
    - httpserver.com
  http:
    - match:
        - uri:
            prefix: /mnq
        rewrite:
          - uri: "/"
      route:
        - destination:
            host: nginx-basic
            port:
              number: 80
    - match:
        - uri:
            exact: "/simple/hello"
        rewrite:
          uri: "/hello"
      route:
        - destination:
            host: httpserver.default.svc.clusster.local
            port:
              number: 80
